# sif-embedding

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
auxiliary_data/: README.md
benchmarks/wiki-article-dataset/: .gitignore  Cargo.toml  README.md
benchmarks/wiki-article-dataset/src/: main.rs
benchmarks/wiki1m/: .gitignore  Cargo.toml  README.md
benchmarks/wiki1m/src/: main.rs
cli/: Cargo.toml
cli/src/: eval_sts.rs  main.rs  segment.rs  semeval_sts.rs
evaluations/japanese/: Cargo.toml  README.md  download.sh
evaluations/japanese/result/: sif-cc-jsick-test.txt  sif-cc-jsts-train.txt  sif-cc-jsts-val.txt  usif-cc-jsick-test.txt  usif-cc-jsts-train.txt  usif-cc-jsts-val.txt
evaluations/japanese/src/: main.rs
evaluations/jglue/: .gitignore  README.md
evaluations/jglue/src/: main.rs
evaluations/law-ai/: .gitignore  Cargo.toml  README.md
evaluations/law-ai/src/: main.rs
evaluations/livedoor-news/: .gitignore  Cargo.toml  README.md
evaluations/livedoor-news/src/: dataset.rs  main.rs
evaluations/semeval/: .gitignore  Cargo.toml  README.md
evaluations/semeval/auxiliary_data/: README.md
evaluations/semeval/scripts/: clean_semeval_sts.py
evaluations/semeval/src/: main.rs
evaluations/senteval/: .gitignore  Cargo.toml  README.md  format.py
evaluations/senteval/result/: sif-cc-score.tsv  sif-glove-score.tsv  usif-cc-score.tsv  usif-glove-score.tsv
evaluations/senteval/src/: main.rs
examples/embeddings/: Cargo.toml  README.md
examples/english-sentences/: Cargo.toml
examples/english-sentences/src/: main.rs
examples/qdrant/: Cargo.toml  README.md
examples/qdrant-search/: .gitignore  Cargo.toml  README.md
examples/qdrant-search/src/: main.rs
examples/qdrant/src/: main.rs
examples/toy/: Cargo.toml
examples/toy/src/: main.rs
examples/tutorial/: Cargo.toml  README.md
examples/tutorial/src/: main.rs
fasttext/: Cargo.toml
fasttext/src/: main.rs
finalfusion/: Cargo.toml
finalfusion-tools/: .gitignore  Cargo.toml  README.md
finalfusion-tools/src/: compile_fasttext.rs  compile_glove.rs  compile_text.rs  unique_glove.rs  unique_text.rs
finalfusion/src/: fasttext.rs  glove.rs  unique.rs
qdrant-examples/: .gitignore  Cargo.toml  README.md
qdrant-examples/src/: create.rs  search.rs
qdrant-search/: .gitignore  Cargo.toml  README.md
qdrant-search/src/: create.rs  main.rs  search.rs
scripts/: clean_semeval_sts.py  requirements.txt
sif-tools/: Cargo.toml  README.md
sif-tools/src/: embedding.rs
src/: finalfusion.rs  lexicon.rs  lib.rs  sif.rs  tool_test.rs  unigram.rs  usif.rs  util.rs  word_embeddings.rs  wordfreq.rs
src/word_embeddings/: io.rs
tutorial/: Cargo.toml  README.md
tutorial/src/: main.rs
wordfreq-tools/: .gitignore  Cargo.toml  README.md
wordfreq-tools/scripts/: compile_all.sh  parse_msgpack.py
wordfreq-tools/src/: main.rs
