[package]
name = "sif-embedding"
version = "0.1.1"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "Smooth inverse frequency (SIF), a simple but powerful embedding technique for sentences"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sif-embedding"
repository = "https://github.com/kampersanda/sif-embedding"
homepage = "https://github.com/kampersanda/sif-embedding"
keywords = ["sentence-embeddings", "nlp"]
categories = ["algorithms", "science", "text-processing"]
edition = "2021"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

openblas = ["ndarray-linalg/openblas"]
netlib = ["ndarray-linalg/netlib"]
intel-mkl = ["ndarray-linalg/intel-mkl"]

openblas-static = ["ndarray-linalg/openblas-static"]
openblas-system = ["ndarray-linalg/openblas-system"]
netlib-static = ["ndarray-linalg/netlib-static"]
netlib-system = ["ndarray-linalg/netlib-system"]
intel-mkl-static = ["ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["ndarray-linalg/intel-mkl-system"]

[dependencies]
anyhow = "1.0"
hashbrown = "0.13.2"
ndarray = { version = "0.15.6", features = ["approx-0_5"] }
ndarray-linalg = { version = "0.16.0", default-features = false }

[dev-dependencies]
approx = "0.5.1"

[workspace]
members = ["cli"]
