[package]
name = "sif-embedding"
version = "0.2.0"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "Smooth inverse frequency (SIF), a simple but powerful embedding technique for sentences"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sif-embedding"
repository = "https://github.com/kampersanda/sif-embedding"
homepage = "https://github.com/kampersanda/sif-embedding"
keywords = ["sentence-embeddings", "nlp"]
categories = ["algorithms", "science", "text-processing"]
edition = "2021"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["openblas"]

# One of these features must always be specified.
# See https://github.com/rust-ndarray/ndarray-linalg/tree/ndarray-linalg-v0.16.0.
openblas = ["ndarray-linalg/openblas", "openblas-src"]
openblas-static = ["ndarray-linalg/openblas-static", "openblas-src"]
openblas-system = ["ndarray-linalg/openblas-system", "openblas-src"]
netlib = ["ndarray-linalg/netlib", "netlib-src"]
netlib-static = ["ndarray-linalg/netlib-static", "netlib-src"]
netlib-system = ["ndarray-linalg/netlib-system", "netlib-src"]
intel-mkl = ["ndarray-linalg/intel-mkl", "intel-mkl-src"]
intel-mkl-static = ["ndarray-linalg/intel-mkl-static", "intel-mkl-src"]
intel-mkl-system = ["ndarray-linalg/intel-mkl-system", "intel-mkl-src"]

[dependencies]
anyhow = "1.0"
finalfusion = "0.17.2"
yada = "0.4.1"

[dependencies.ndarray]
version = "0.15.6"
features = ["approx-0_5", "blas", "std"]
default-features = false

[dependencies.ndarray-linalg]
version = "0.16.0"
default-features = false

[dependencies.openblas-src]
version = "0.10.4"
optional = true
default-features = false
features = ["cblas"]

[dependencies.netlib-src]
version = "0.8.0"
optional = true
default-features = false
features = ["cblas"]

[dependencies.intel-mkl-src]
version = "0.8.1"
optional = true
default-features = false

[dev-dependencies]
approx = "0.5.1"

[package.metadata.docs.rs]
# Required to avoid timeout errors due to openblas compilation.
no-default-features = true

[workspace]
members = ["finalfusion-tools"]
exclude = ["evaluations"]
