[package]
name = "sif-embedding"
# NOTE(kampersanda): Do not forget to update the followings as well.
#  - the version number in `lib.rs`
#  - `README` in tutorial
#  - `MODEL_MAGIC` in `sif.rs` and `usif.rs` (if necessary)
version = "0.5.1"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "Smooth inverse frequency (SIF), a simple but powerful embedding technique for sentences"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sif-embedding"
repository = "https://github.com/kampersanda/sif-embedding"
homepage = "https://github.com/kampersanda/sif-embedding"
keywords = ["sentence-embeddings", "nlp"]
categories = ["algorithms", "science", "text-processing"]
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# One of these features must always be specified.
# See https://github.com/rust-ndarray/ndarray-linalg/tree/ndarray-linalg-v0.16.0.
openblas = ["openblas-static"]
openblas-static = ["ndarray-linalg/openblas-static", "openblas-src/static"]
openblas-system = ["ndarray-linalg/openblas-system", "openblas-src/system"]
netlib = ["netlib-static"]
netlib-static = ["ndarray-linalg/netlib-static", "netlib-src/static"]
netlib-system = ["ndarray-linalg/netlib-system", "netlib-src/system"]
intel-mkl = ["intel-mkl-static"]
intel-mkl-static = [
    "ndarray-linalg/intel-mkl-static",
    "intel-mkl-src/mkl-static-lp64-seq",
]
intel-mkl-system = [
    "ndarray-linalg/intel-mkl-system",
    "intel-mkl-src/mkl-dynamic-lp64-seq",
]

# For docs.rs
docs = ["finalfusion", "wordfreq"]

# For easing test command `cargo test --features test`.
test = ["finalfusion", "wordfreq", "openblas-system"]

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"

# NOTE(kampersanda): Do not forget to update the version number in `lib.rs` as well.
finalfusion = { version = "0.17.2", optional = true }

# https://github.com/rust-lang/rust/issues/113152
proc-macro2 = "1.0.69"

rand = "0.8.5"

# NOTE(kampersanda): Do not forget to update the version number in `lib.rs` as well.
wordfreq = { version = "0.2.3", optional = true }

[dependencies.ndarray]
version = "0.15.6"
features = ["approx-0_5", "blas", "serde", "std"]
default-features = false

[dependencies.ndarray-linalg]
# NOTE(kampersanda): Do not forget to update the version number in `lib.rs` as well.
version = "0.16.0"
default-features = false

[dependencies.openblas-src]
version = "0.10.4"
optional = true
default-features = false
features = ["cblas"]

[dependencies.netlib-src]
version = "0.8.0"
optional = true
default-features = false
features = ["cblas"]

[dependencies.intel-mkl-src]
version = "0.8.1"
optional = true
default-features = false

[dev-dependencies]
approx = "0.5.1"

[workspace]
members = [
    "benchmarks/wiki1m",
    "finalfusion-tools",
    "evaluations/japanese",
    "evaluations/senteval",
    "finalfusion-tools",
    "qdrant-examples",
    "tutorial",
]

[package.metadata.docs.rs]
features = ["docs"]
default-features = false
