[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
sif-embedding = { path = ".." }

[[bin]]
name = "eval_sts"
path = "src/eval_sts.rs"
