[package]
name = "finalfusion-tools"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
finalfusion = "0.17.2"

[[bin]]
name = "unique_text"
path = "src/unique_text.rs"

[[bin]]
name = "compile_text"
path = "src/compile_text.rs"

[[bin]]
name = "compile_fasttext"
path = "src/compile_fasttext.rs"
