[package]
name = "finalfusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
finalfusion = "0.17.2"

[[bin]]
name = "fasttext"
path = "src/fasttext.rs"

[[bin]]
name = "glove"
path = "src/glove.rs"

[[bin]]
name = "unique"
path = "src/unique.rs"
