[package]
name = "qdrant-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# One of these features must always be specified.
# e.g.,
#  - `cargo run --features openblas`
#  - `cargo run --features intel-mkl`
openblas = ["openblas-static"]
openblas-static = ["sif-embedding/openblas-static", "openblas-src/static"]
openblas-system = ["sif-embedding/openblas-system", "openblas-src/system"]
netlib = ["netlib-static"]
netlib-static = ["sif-embedding/netlib-static", "netlib-src/static"]
netlib-system = ["sif-embedding/netlib-system", "netlib-src/system"]
intel-mkl = ["intel-mkl-static"]
intel-mkl-static = [
    "sif-embedding/intel-mkl-static",
    "intel-mkl-src/mkl-static-lp64-seq",
]
intel-mkl-system = [
    "sif-embedding/intel-mkl-system",
    "intel-mkl-src/mkl-dynamic-lp64-seq",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.2.7", features = ["derive"] }
finalfusion = "0.17.2"
ndarray = "0.15.6"
qdrant-client = "1.6.0"
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
vtext = "0.2.0"
wordfreq-model = { version = "0.2.3", features = ["large-en"] }

[dependencies.sif-embedding]
path = "../"
features = ["finalfusion", "wordfreq"]
default-features = false

[dependencies.openblas-src]
version = "0.10.4"
optional = true
default-features = false
features = ["cblas"]

[dependencies.netlib-src]
version = "0.8.0"
optional = true
default-features = false
features = ["cblas"]

[dependencies.intel-mkl-src]
version = "0.8.1"
optional = true
default-features = false

[[bin]]
name = "create"
path = "src/create.rs"

[[bin]]
name = "search"
path = "src/search.rs"
