[package]
name = "semeval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# One of these features must always be specified.
# See https://github.com/rust-ndarray/ndarray-linalg/tree/ndarray-linalg-v0.16.0.
openblas = ["sif-embedding/openblas"]
netlib = ["sif-embedding/netlib"]
intel-mkl = ["sif-embedding/intel-mkl"]
openblas-static = ["sif-embedding/openblas-static"]
openblas-system = ["sif-embedding/openblas-system"]
netlib-static = ["sif-embedding/netlib-static"]
netlib-system = ["sif-embedding/netlib-system"]
intel-mkl-static = ["sif-embedding/intel-mkl-static"]
intel-mkl-system = ["sif-embedding/intel-mkl-system"]

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
sif-embedding = { path = "../..", default-features = false }
