[package]
name = "semeval"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

openblas = ["sif-embedding/openblas"]
openblas-static = ["sif-embedding/openblas-static"]
openblas-system = ["sif-embedding/openblas-system"]

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
finalfusion = "0.17.2"
ndarray-stats = "0.5.1"
wordfreq = "0.2"

[dependencies.sif-embedding]
path = "../../"
features = ["finalfusion", "wordfreq"]
default-features = false

[dependencies.ndarray]
version = "0.15.6"
features = ["approx-0_5", "blas", "std"]
default-features = false

[dependencies.openblas-src]
version = "0.10.4"
default-features = false
features = ["cblas"]
