[package]
name = "toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["openblas"]

openblas = ["openblas-static"]
openblas-static = ["sif-embedding/openblas-static", "openblas-src/static"]
openblas-system = ["sif-embedding/openblas-system", "openblas-src/system"]
netlib = ["netlib-static"]
netlib-static = ["sif-embedding/netlib-static", "netlib-src/static"]
netlib-system = ["sif-embedding/netlib-system", "netlib-src/system"]
intel-mkl = ["intel-mkl-static"]
intel-mkl-static = [
    "sif-embedding/intel-mkl-static",
    "intel-mkl-src/mkl-static-lp64-seq",
]
intel-mkl-system = [
    "sif-embedding/intel-mkl-system",
    "intel-mkl-src/mkl-dynamic-lp64-seq",
]

[dependencies]
finalfusion = "0.17.2"
sif-embedding = { path = "../../", default-features = false }

[dependencies.ndarray]
version = "0.15.6"
features = ["approx-0_5", "blas", "std"]
default-features = false

[dependencies.openblas-src]
version = "0.10.4"
optional = true
default-features = false
features = ["cblas"]

[dependencies.netlib-src]
version = "0.8.0"
optional = true
default-features = false
features = ["cblas"]

[dependencies.intel-mkl-src]
version = "0.8.1"
optional = true
default-features = false
